c2prj1_cards/grade.txt
Grading at Wed Jun 17 16:08:42 UTC 2020
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:32:8: error: variable ‘x’ set but not used [-Werror=unused-but-set-variable]
   char x;
        ^
cards.c: In function ‘suit_letter’:
cards.c:50:3: error: enumeration value ‘NUM_SUITS’ not handled in switch [-Werror=switch]
   switch(c.suit)
   ^
cards.c:49:8: error: variable ‘x’ set but not used [-Werror=unused-but-set-variable]
   char x;
        ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
